# mathsys

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  SECURITY.md  __main__.py  babel.config.json  changelog.md  compiler.js  compiler.py  compiler.ts  entry.py  entry.rs  extra.msm  file  file.ltx  file.math  file.msd  file.msm  file.wasm  interfaceerror.rs  interpreter.rs  issues.rs  lib.rs  main.rs  mathsys  nonamb.py  package-lock.json  package.json  prelude.rs  pyproject.toml  resolver.rs  test.msm  test.py  test.sh  tsconfig.json
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
backends/: latex.rs  mod.rs
benches/: tokenizer.rs
data/: root.msm
dev/: __init__.py  issues.rs  mod.rs
dev/base/: builder.rs  grammar.rs  issues.rs  level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  nonterminal.rs  parser.rs  recognizer.rs  resolver.rs  start.rs  tokenizer.rs
dev/main/: main.rs
dev/math/: Cargo.toml
dev/math/context/: integer.rs
dev/math/data/: _nest.rs  _term.rs
dev/math/lib/: group.rs  object.rs  sign.rs
dev/parser/: grammar.rs  parser.rs
dev/python/: builder.py  grammar.py  issues.py  latex.py  level2.py  level3.py  level4.py  level5.py  nonterminal.py  parser.py  tokenizer.py
dev/runtime/: runtime.rs  traits.rs
dev/solver/: nonterminal.rs  solver.rs
dev/syntax/: level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  start.rs
dev/tokenizer/: tokenizer.rs
lib/: lib.rs
lib/extensor/: grammar.rs  mod.rs  types.rs
lib/failure/: mod.rs
lib/filter/: mod.rs
lib/grammar/: bnf.rs  constants.rs  ebnf.rs  mod.rs  object.rs  rule.rs  symbol.rs
lib/latex/: level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  mod.rs  start.rs
lib/parser/: data.rs  mod.rs  parsed.rs  pointer.rs  state.rs  types.rs
lib/reducer/: grammar.rs  mod.rs
lib/solver/: context.rs  item.rs  level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  mod.rs  nonterminal.rs  spawn.rs  start.rs  subtree.rs  types.rs
lib/syntax/: level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  mod.rs
lib/tokenizer/: kind.rs  mod.rs  position.rs  responsibility.rs  token.rs
math/context/: natural.rs  nexists.rs  undefined.rs  whole.rs
math/data/: _equation.rs  _factor.rs  _node.rs  _start.rs  _whole.rs
math/lib/: stack.rs
mathsys/: __init__.py  __main__.py
mathsys/dev/: Cargo.toml  __init__.py  index.ts
mathsys/dev/.cargo/: config.toml
mathsys/dev/builder/: code.py  local.py
mathsys/dev/common/: standard.msX
mathsys/dev/core/: lib.rs
mathsys/dev/core/context/: infinite.rs  integer.rs  natural.rs  nexists.rs  number.rs  tensor.rs  undefined.rs  variable.rs  whole.rs
mathsys/dev/core/data/: _absolute.rs  _annotation.rs  _comment.rs  _declaration.rs  _definition.rs  _equation.rs  _expression.rs  _factor.rs  _infinite.rs  _limit.rs  _natural.rs  _nest.rs  _node.rs  _number.rs  _start.rs  _tensor.rs  _term.rs  _use.rs  _variable.rs  _whole.rs
mathsys/dev/core/lib/: class.rs  group.rs  object.rs  reparser.rs  stdout.rs  tip.rs
mathsys/dev/ir/: code.py  code.ts  dataclasses.py  dataclasses.ts  local.py  local.ts
mathsys/dev/latex/: code.py  code.ts  dataclasses.py  dataclasses.ts  local.py  local.ts
mathsys/dev/main/: Cargo.toml  main.rs
mathsys/dev/math/: Cargo.toml  lib.rs  prelude.rs
mathsys/dev/math/context/: infinite.rs  integer.rs  natural.rs  nexists.rs  rational.rs  tensor.rs  undefined.rs  variable.rs  whole.rs
mathsys/dev/math/data/: _absolute.rs  _annotation.rs  _casts.rs  _comment.rs  _declaration.rs  _definition.rs  _equation.rs  _expression.rs  _factor.rs  _infinite.rs  _limit.rs  _nest.rs  _node.rs  _rational.rs  _start.rs  _tensor.rs  _term.rs  _undefined.rs  _use.rs  _variable.rs  _whole.rs
mathsys/dev/math/lib/: class.rs  group.rs  object.rs  opcode.rs  pointer.rs  reparser.rs  runtime.rs  sign.rs  stack.rs  stdout.rs  tip.rs  types.rs  value.rs
mathsys/dev/parser/: code.py  code.ts  dataclasses.py  dataclasses.ts  local.py  local.ts  post.ts  syntax.ne
mathsys/dev/python/: base.py  builder.py  code.ts  data.py  dataclasses.ts  ebnf.py  gll.py  grammar.py  ir.py  issues.py  latex.py  level1.py  level2.py  level3.py  level4.py  level5.py  nonterminal.py  parser.py  post.ts  start.py  syntax.ne  targets.py  tokenizer.py
mathsys/dev/typescript/: grammar.ts  ir.ts  issues.ts  latex.ts  level1.ts  level5.ts  nonterminal.ts  start.ts  tokenizer.ts
mathsys/v3/common/: standard.py
mathsys/v4/: __init__.py
mathsys/v4/builder/: code.py  local.py
mathsys/v4/ir/: local.py
mathsys/v4/latex/: dataclasses.py
mathsys/v5/: index.ts
mathsys/v5/ir/: local.ts
mathsys/v5/latex/: code.ts
mathsys/v5/parser/: code.ts
mathsys/v6/: __init__.py
mathsys/v6/python/: builder.py  issues.py  level3.py  parser.py  tokenizer.py
parser/: extensor.rs  grammar.rs  mod.rs  state.rs
python/mathsys/: __init__.py  __main__.py
python/mathsys/dev/: Cargo.toml  __init__.py
python/testing/: test.json
settings/: mod.rs  noise.rs
solver/: context.rs  mod.rs  nonterminal.rs  solver.rs
spec/: ir.isa  no-strict.ebnf  strict.ebnf  syntax.ebnf
std/: file.msm
syntax/: level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  mod.rs  object.rs  start.rs
test/: test.calc  test.ir  test.ltx  test.math
tests/: latex.rs
tokenizer/: mod.rs  token.rs  tokenizer.rs
typescript/: index.ts
typescript/main/: parser.ts  tokenizer.ts
typescript/parser/: code.cjs  code.cts  code.ts  dataclasses.ts  local.ts  postprocessing.ts  syntax.cjs  syntax.ne
v3/main/: builder.py  syntax.py
v4/common/: standard.py
v4/ir/: code.py
v4/parser/: code.py  dataclasses.py
v5/: Cargo.toml  __init__.py
v5/core/: Cargo.toml
v5/ir/: code.py  local.py
v5/latex/: local.py
v5/parser/: code.py  local.py  local.ts  post.ts
v6/: Cargo.toml  index.ts
v6/common/: standard.msX
v6/main/: Cargo.toml
v6/math/: lib.rs
v6/python/: grammar.py  level2.py  level4.py  nonterminal.py
(+65 files in other folders)
