[package]
name = "mathsys"
version = "0.0.0"
edition = "2024"
rust-version = "1.98"
authors = ["Alejandro Vaz <alejandro.vaz.myt@gmail.com>"]
description = "The Natural Language of Math."
license = "MIT"
repository = "https://github.com/alejandro-vaz/mathsys"

[lib]
name = "mathsys"
path = "lib/lib.rs"

[[bin]]
name = "mathsys"
path = "main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false

[dependencies]
regex = "=1.12.4"
rustc_version_runtime = "=0.3.0"
strum = "=0.28.0"
strum_macros = "=0.28.0"
enum_dispatch = "=0.3.13"
typed-arena = "=2.0.2"
libutils = "=9.0.2"
enum-as-inner = "=0.7.0"
elsa = "=1.11.2"