[package]
name = "mathsys"
version = "0.0.2"
edition = "2024"
rust-version = "1.98"
authors = ["Alejandro Vaz <alejandro.vaz.myt@gmail.com>"]
description = "The Natural Language of Math."
license = "MIT"
repository = "https://github.com/alejandro-vaz/mathsys"

[lib]
name = "mathsys"
path = "lib/lib.rs"

[[bin]]
name = "mathsys"
path = "main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false

[dependencies]
regex = "1.12"
rustc_version_runtime = "0.3"
strum = "0.28"
strum_macros = "0.28"
enum_dispatch = "0.3"
typed-arena = "2.0"
libutils = "2.0"
enum-as-inner = "0.7"
elsa = "1.11"