[package]
name = "mathsys"
version = "0.2.0"
edition = "2024"
rust-version = "1.99"
authors = ["Alejandro Vaz <alejandro.vaz.myt@gmail.com>"]
description = "The Natural Language of Math."
license = "MIT"
repository = "https://github.com/alejandro-vaz/mathsys"

[lib]
name = "mathsys"
path = "lib/lib.rs"

[[bin]]
name = "mathsys"
path = "main.rs"

[[bench]]
name = "tokenizer"
harness = false

opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false

[profile.bench]
inherits = "release"

[dependencies]
strum = "0.28"
strum_macros = "0.28"
enum_dispatch = "0.3"
typed-arena = "2.0"
enum-as-inner = "0.7"
elsa = "1.11"
libutils = "16.1"

[dev-dependencies]
criterion = "0.8"