[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathsys"
version = "0.6.1"
description = "The Domain Specific Language for math."
readme = "README.md"
license = {text = "CC-BY-NC-ND-4.0 with additional clauses and exceptions"}
authors = [{ name = "Alejandro Vaz", email = "notyetimplemented@abscissa.eu" }]
keywords = ["dsl", "math", "mathsys", "compiler", "language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "lark"
]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
mathsys = ["**"]