[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathsys"
version = "4.2.0"
description = "The Domain Specific Language for math."
readme = ".github/README.md"
license = {file = ".github/LICENSE"}
authors = [{ name = "Alejandro Vaz", email = "support@abscissa.eu" }]
keywords = ["dsl", "math", "mathsys", "compiler", "language"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "lark"
]

[project.scripts]
mathsys = "mathsys.__main__:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
mathsys = ["**"]